--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
   --clr-bg-alt: #fff;
   --clr-fg: #555;
   --clr-fg-alt: #444;
-  --clr-primary: #2978b5;
+  --clr-primary: #126817;
   --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
@@ -185,9 +185,9 @@ button {
   border: 0;
 }
 
-.btn--plain:hover {
+/* .btn--plain:hover {
   transform: translateY(-4px);
-}
+} */
 
 .btn--icon {
   padding: 0;
